navbar text alignment fixing

--- a/src/App.css
+++ b/src/App.css
@@ -493,7 +493,7 @@ nav.navbar .menuText {
 
 .myCommunities p {
   vertical-align: text-top;
-  padding-bottom: 75px;
+  padding-bottom: 65px;
 }
 
 .myCommunities .row {
